dark mode: fix select focus styles
fixes #4973

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_form.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_form.scss
@@ -328,9 +328,6 @@ label.required::after {
             &[multiple]:focus {
                 background-color: $color-grey-2;
             }
-            &:focus {
-                background-color: transparent;
-            }
         }
     }
 
